enable preview; create docker to test